# model_engine

./: README.md  pyproject.toml
grape_model/: __init__.py  engine.py  grape_phenology.py  grape_phenology_differentiable.py  nasapower.py  requirements.txt  states_rates.py  util.py
model_engine/: __init__.py  engine.py  util.py
model_engine/envs/: base_env.py  model_env.py  model_env_tensor.py  sync_vector_env.py
model_engine/inputs/: input_providers.py  nasapower.py  util.py
model_engine/inputs/.pcse/meteo_cache/: NASAPowerWeatherDataProvider_LAT00460_LON-1200.cache
model_engine/models/: __init__.py  base_model.py  grape_cold_hardiness.py  grape_phenology.py  states_rates.py  tensor_grape_phenology.py
model_engine/models/grape_cold_hardiness/: grape_cold_hardiness_tensor.py  tensor_batch_grape_cold_hardiness.py  tensor_grape_cold_hardiness.py
model_engine/models/grape_phenology/: grape_phenology_numpy.py  grape_phenology_numpybatch.py  grape_phenology_tensor.py  grape_phenology_tensor_batch.py  numpy_batch_grape_phenology.py  tensor_batch_fast_grape_phenology.py  tensor_batch_grape_phenology.py  tensor_grape_phenology.py
model_engine/models/irrigation/: numpy_re_irrigation.py
model_engine/models/irrigation_pcse/: numpy_pcse_irrigation.py
model_engine/models/irrigation_re/: numpy_re_irrigation.py  tensor_batch_re_irrigation.py  tensor_re_irrigation.py
model_engine/models/wofost/: tensor_batch_wofost.py  tensor_wofost.py  wofost.py  wofost8.py
model_engine/models/wofost/crop/: __init__.py  phenology.py  (+9 more)
model_engine/weather/: nasapower.py  util.py
(+71 files in other folders)
